--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,9 +1,14 @@
 .container {
-  padding: 20px;
+  padding: 15px;
   cursor: pointer;
-  background-color: #53c28b;
+  background-color: #53b7c2;
   border: none;
-  border-radius: 5px;
+  font-size: large;
+  border-radius: 10px;
   width: max-content;
   color: white;
+}
+
+.container:hover {
+  background-color: #266dc3;
 }
