--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -21,9 +21,13 @@
 .logout {
   padding: 5px;
   border: none;
-  background-color: #53c28b;
+  background-color: #53b7c2;
   color: white;
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
+}
+
+.logout:hover {
+  background-color: #266dc3;
 }
