--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -13,9 +13,10 @@
   position: absolute;
   bottom: 20px;
   left: 20px;
-  background-color: #53c28b;
+  background-color: #53bbc2;
   padding: 5px;
   color: white;
+  border-radius: 3px;
 }
 
 .textContainer {
