--- a/src/app/portfolio/page.module.css
+++ b/src/app/portfolio/page.module.css
@@ -21,7 +21,7 @@
 }
 
 .item:nth-child(1) {
-  background: url("/illustration.png");
+  background: url("/illustration.jpg");
 }
 .item:nth-child(2) {
   background: url("/websites.jpg");
@@ -39,5 +39,5 @@
 }
 
 .item:hover .title {
-  color: #53c28b;
+  color: #5383c2;
 }
