--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -21,7 +21,7 @@
 .logout {
   padding: 5px;
   border: none;
-  background-color: #53b7c2;
+  background-color: #538bc2;
   color: white;
   font-weight: bold;
   cursor: pointer;
